feature(all): build error 해결, swagger api docs 작업, gpt service 개발 진행.