@@ -14,8 +14,7 @@ public enum MemberType {
 
     public static boolean isMemberType(String type) {
         List<MemberType> memberTypes = Arrays.stream(MemberType.values())
-                .filter(memberType -> memberType.name().equals(type))
-                .collect(Collectors.toList());
+                .filter(memberType -> memberType.name().equals(type)).toList();
         return memberTypes.size() != 0;
     }
 
